test/valid/MissingMethodName/LeastCommonMultiple.plume
/**
 * @author 35237, Marcos Vasco
 */
class LeastCommonMultiple extends Object is
  
  method calculate : (num1 : Integer, num2 : Integer) -> Integer is
    if num1 == 0 || num2 == 0 then 0
    else (num1/new GreatestCommonDivisor().calculate(num1, num2))*num2